modified:   index.html 	modified:   src/style.css

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
     </div>
     <div id="wrapper2">
-        
+        <img src="https://hips.hearstapps.com/hmg-prod/images/alpe-di-siusi-sunrise-with-sassolungo-or-langkofel-royalty-free-image-1623254127.jpg"id="mountains1"alt="mountains">
     </div>
 </body>
 </html>
