modified:   index.html#     modified:   src/script.js modified:   src/style.css

--- a/index.html
+++ b/index.html
@@ -6,20 +6,19 @@
     <title>nice</title>
     <link rel="stylesheet" href="src/style.css">
     <script src="src/script.js"></script>
+
 </head>
 <body>
     <div id="wrapper1">
         <div class="side" id="leftside">
-            <h1 class="title">A Simple Header Is <br>Just A Better<span class="fancy"> Header</span></h1>
+            <h2 class="title">A Simple Header Is <br>Just A Better<span class="fancy"> Header</span></h2>
         </div>
         <div class="side" id="rightside">
-            <h1 class="title">A Complex Header Is Just A Better<span class="fancy"> Header</span></h1>
+            <h2 class="title">A Complex Header Is Just A Better<span class="fancy"> Header</span></h2>
         </div>
     </div>
-    <div id="wrapper2">
-        <div id="window1">
-            
-        </div>
+    <div id="wrap2">
+        <canvas id="canvas"></canvas>
     </div>
 </body>
 </html>
